# SemLA

./: .gitignore  Makefile  README.md  experiments.py  experiments.sh  generate_embeddings.py  generate_embeddings.sh  pyproject.toml  requirements.txt
catseg/: eval.sh  eval_lora.sh  plain_train_net.py  run.sh  run_lora.sh  train_net.py
catseg/cat_seg/: __init__.py  cat_seg_model.py  config.py
catseg/cat_seg/data/datasets/: acdc.py  (+23 more)
catseg/configs/: base.yaml  config.yaml  test_blip.yaml  vitl_336.yaml
catseg/configs/a150/: a150.yaml
catseg/configs/acdc/: acdc_base.yaml  multidomain_lora.yaml
catseg/configs/bdd/: bdd.yaml
catseg/configs/cityscapes/: cityscapes_base.yaml  multidomain_lora.yaml
catseg/configs/coconutL/: coconutL.yaml
catseg/configs/idd/: idd.yaml
catseg/configs/muses/: multidomain_fft.yaml  multidomain_lora.yaml  muses_base.yaml
catseg/configs/mv/: mv.yaml
catseg/configs/nyu/: nyu.yaml
catseg/configs/pas20/: pas20.yaml
catseg/configs/pas21/: pas21.yaml
catseg/configs/pc459/: pc459.yaml
catseg/configs/pc59/: pc59.yaml
catseg/datasets/: ade150.json  coco.json  coconut.json  cs19.json  idd30 copy.json  idd30.json  mv65.json  nyu40.json  pc459.json  pc59.json  prepare_pascal_context_459_train.py  prepare_pascal_context_59_train.py  prepare_voc.py  prepare_voc_train.py  voc20.json  voc20b.json  voc21.json
catseg/demo/: predictor.py  visualizer.py
config/: semla_config.yaml  source_domains.yaml  target_domains.yaml
domain_orchestrator/: domain_orchestrator.py  embedding.py  utils.py
misc/nyudv2_splits/: test.txt  train.txt
(+27 files in other folders)
