[project]
name = "semla"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cityscapesscripts>=2.2.4",
    "detectron2",
    "einops>=0.8.1",
    "ftfy==6.3.1",
    "imageio==2.34.0",
    "open-clip-torch==2.31.0",
    "opencv-python>=4.9.0.80",
    "peft>=0.10.0",
    "pillow==10.2.0",
    "regex>=2024.11.6",
    "scipy>=1.12.0",
    "setuptools==65.5.0",
    "timm==1.0.15",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wandb>=0.16.5",
]

[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }

[tool.uv]
no-build-isolation-package = ["detectron2"]
# Ensure that the setuptools v60.0.0 is used whenever a package has a build dependency
# on setuptools.
build-constraint-dependencies = ["setuptools==60.0.0"]